--- a/payroll/file/t4summary.html
+++ b/payroll/file/t4summary.html
@@ -244,26 +244,26 @@
 
 <details>
   <summary id="ln_14">Line 14 – Employment income</summary> 
-   <p>Add the amount in box 14 on all T4 slips. Report the total on line 14.</p> 
+   <p>Add the amount in box 14 of all T4 slips. Report the total on line 14.</p> 
  </details> 
 
 <details>
   <summary id="ln_20">Line 20 – Registered pension plan (RPP) contributions</summary> 
-   <p>Add the amount in box 20 on all T4 slips. Report the total on line 20.</p> 
+   <p>Add the amount in box 20 of all T4 slips. Report the total on line 20.</p> 
  </details>
 
 <details>
   <summary id="ln_52">Line 52 – Pension adjustment</summary> 
-    <p>Add the amount in box 52 on all T4 slips. Report the total on line 52.</p> 
+    <p>Add the amount in box 52 of all T4 slips. Report the total on line 52.</p> 
  </details> 
 
 <details>
   <summary id="ln_16">Line 16 – Employee's CPP contributions</summary> 
-  <p>Add the amount in box 16 on all T4 slips. Report the total on line 16.</p> 
+  <p>Add the amount in box 16 of all T4 slips. Report the total on line 16.</p> 
  </details> 
 
 <details><summary id="bx_16a"><span class="label label-warning">New - For T4 summaries filed on or after calendar year 2024</span> Boxes 16A – Employee's second CPP contributions</summary>	
-<p>For T4 summaries filed on or after calendar year 2024, you will need to add the amount in box 16A on all T4 slips. You will need to report the total on line 16A.</p>
+<p>For T4 summaries filed on or after calendar year 2024, you will need to add the amount in box 16A of all T4 slips. You will need to report the total on line 16A.</p>
 <p>The CRA will provide more instructions by the end of 2023. </p>
 </details>	
 
@@ -279,7 +279,7 @@
 
 <details>
   <summary id="ln_18">Line 18 – Employee's EI premiums</summary> 
-   <p>Add the amount in box 18 on all T4 slips. Report the total on line 18.</p> 
+   <p>Add the amount in box 18 of all T4 slips. Report the total on line 18.</p> 
  </details> 
  <details>
   <summary id="ln_19">Line 19 – Employer's EI premiums</summary> 
@@ -288,7 +288,7 @@
  
  <details>
   <summary id="ln_22">Line 22 – Income tax deducted</summary> 
-   <p>Add the amount in box 22 on all T4 slips. Report the total on line 22.</p> 
+   <p>Add the amount in box 22 of all T4 slips. Report the total on line 22.</p> 
  </details> 
  
  <details>
