--- a/payroll/file/t4arcasum.html
+++ b/payroll/file/t4arcasum.html
@@ -233,35 +233,36 @@
 </details>
 
 <details><summary id="12">Line 12 &ndash; Refund of employer contributions</summary>
-<p>Add the amount in box 12 on all T4A-RCA slips. Report the total on line 12. </p>
+<p>Add the amount in box 12 of all T4A-RCA slips. Report the total on line 12. </p>
 </details>
 
 <details><summary id="14">Line 14 &ndash; Refund of employee contributions</summary>
-<p>Add the amount in box 14 on all T4A-RCA slips. Report the total on line 14. </p>
+<p>Add the amount in box 14 of all T4A-RCA slips. Report the total on line 14. </p>
 </details>
 
 <details><summary id="16">Line 16 &ndash; Distributions</summary>
-<p>Add the amount in box 16 on all T4A-RCA slips. Report the total on line 16. </p>
+<p>Add the amount in box 16 of all T4A-RCA slips. Report the total on line 16. </p>
 </details>
 
 <details><summary id="17">Line 17 &ndash; Distributions eligible for pension income splitting</summary>
-<p>Add the amount in box 17 on all T4A-RCA slips. Report the total on line 17. </p>
+<p>Add the amount in box 17 of all T4A-RCA slips. Report the total on line 17. </p>
 </details>
 
 <details><summary id="18">Line 18  &ndash; Selling price of an interest in the RCA </summary>
-<p>Add the amount in box 18 on all T4A-RCA slips. Report the total on line 18. </p>
+<p>Add the amount in box 18 of all T4A-RCA slips. Report the total on line 18. </p>
 </details>
 
 <details><summary id="20">Line 20 &ndash; Other amounts </summary>
-<p>Add the amount in box 20 on all T4A-RCA slips. Report the total on line 20. </p>
+<p>Add the amount in box 20 of all T4A-RCA slips. Report the total on line 20. </p>
 </details>
 
 <details><summary id="22">Line 22 &ndash; Income tax deducted </summary>
-<p>Add the amount in box 22 on all T4A-RCA slips. Report the total on line 22. </p>
+<p>Add the amount in box 22 of all T4A-RCA slips. Report the total on line 22. </p>
 </details>
 
 <details><summary id="82">Line 82 &ndash; Remittances </summary>
-<p>Report the total amount of income tax you remitted to the CRA for your payroll account. You can get this amount from your most recent PD7A.</p>
+  <p>  Report the total amount of payroll deductions and contributions you remitted to the CRA for your payroll account. You can get this amount from your most recent PD7A.</p>
+    	
  <p>Learn more: <a href="/cra-arc/payroll/file/receiving.html">Receiving payroll correspondence from us</a>  </p>
 </details>
 
