--- a/payroll/file/t4anrsum.html
+++ b/payroll/file/t4anrsum.html
@@ -221,19 +221,20 @@
 </details>
 
 <details><summary id="h_0_5">Line 18 &ndash; Gross income</summary>
-<p>Add the amount in box 18 on all T4A-NR slips. Report the total on line 18.</p>
+<p>Add the amount in box 18 of all T4A-NR slips. Report the total on line 18.</p>
 </details>
 
 <details><summary id="h_0_6">Line 20 &ndash; Travel expenses</summary>
-<p>Add the amount in box 20 on all T4A-NR slips. Report the total on line 20.</p>
+<p>Add the amount in box 20 of all T4A-NR slips. Report the total on line 20.</p>
 </details>
 
 <details><summary id="h_0_7">Line 22 &ndash;Income tax deducted</summary>
-<p>Add the amount in box 22 on all T4A-NR slips. Report the total on line 22.</p>
+<p>Add the amount in box 22 of all T4A-NR slips. Report the total on line 22.</p>
 </details>
 
 <details><summary id="h_0_8">Line 82 &ndash; Remittances</summary>
-<p>Report the total amount of tax you remitted to the CRA. You can get this amount from your most recent PD7A.</p>
+  <p>  Report the total amount of payroll deductions and contributions you remitted to the CRA for your payroll account. You can get this amount from your most recent PD7A.</p>
+    
  <p>Learn more: <a href="/cra-arc/payroll/file/receiving.html">Receiving payroll correspondence from us</a>  </p>
 </details>
 
