--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -387,10 +387,9 @@
 <p>The benefit may not be taxable if the benefit paid to your employee for the use of their vehicle in the course of their employment duties is done in <strong>one</strong> of the following special situations:</p>
 
 <ul>
-<li>Refer to: <a href="prescribed.html">Your employee is working in a prescribed zone</a> </li>
-<li>Refer to: <a href="disability.html">Your employee has a severe or prolonged impairment</a> </li>
-<li>Refer to: <a href="travel-expenses.html#remote">Your employee works in a remote location</a> </li>
-<li>Refer to: <a href="travel-expenses.html#special">Your employee works at a special work site</a> </li>
+<li><a href="remote.html">Your employee works in remote locations</a> </li>
+<li><a href="special-site.html">Your employee works at special work sites, including prescribed zones</a> </li>
+<li><a href="disability.html">Your employee has a severe or prolonged impairment</a> </li>
 </ul>
 <hr>	
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
