--- a/payroll/calculate/benefit/what.html
+++ b/payroll/calculate/benefit/what.html
@@ -303,7 +303,7 @@
 <div class="clear"></div>
 <h2 id="h_1">What is a benefit, an allowance or a reimbursement</h2>
 <dl class="dl-horizontal"><dt> Benefit</dt>
-<dd>
+<dd><div id="ajax-benefit">
 	<p>Your employee has received a benefit if you pay for or give something that is personal in nature:</p>
 
 <ul>
@@ -311,10 +311,10 @@
 <li>to a person who does not deal at arm's length with the employee (such as the employee's spouse, child, or sibling) </li>
 </ul>
 <p>A benefit is a good or service you give, or arrange for a third party to give, to your employee such as free use of property that you own. A benefit includes an allowance or a reimbursement of an employee's personal expense.</p>
-
+</div>
 	      </dd>
  <dt> Allowance</dt>
-<dd>
+<dd><div id="ajax-allowance">
 <p>An allowance or an advance is any periodic or lump-sum amount that you pay to your employee on top of salary or wages, to help the employee pay for certain anticipated expenses without having them support the expenses. An allowance or advance is:</p>
 
 <ul>
@@ -323,11 +323,11 @@
 <li>used as the employee chooses, since the employee does not provide receipts  </li>
 </ul>
 <p>An allowance can be calculated based on distance, time or something else, such as a motor vehicle allowance using the distance driven or a meal allowance using the type and number of meals per day.</p>
-</dd>
+</div></dd>
  <dt>Reimbursement</dt>
-<dd>
+<dd><div id="ajax-reimbursement">
 <p>A reimbursement is an amount you pay to your employee to repay expenses they incurred while carrying out the duties of employment. The employee has to keep proper records (detailed receipts) to support the expenses and give them to you.</p>
-</dd>
+</div></dd>
 </dl>
 
 <h2 id="h_2">What are cash, near-cash and non-cash benefits</h2>
