--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -284,7 +284,7 @@
  <div class="alert alert-info">
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the current CRA administrative policy. </strong></p>
 </div>
-<p>You may provide an allowance or reimbursement to your employee to compensate for the cost of travel expenses (other than automobile or motor vehicle expenses) in connection with or in the course of their office or employment duties.</p>
+<p>You may provide an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> to your employee to compensate for the cost of travel expenses (other than automobile or motor vehicle expenses) in connection with or in the course of their office or employment duties.</p>
 
 <h2 class="h3">On this page</h2>
   	
@@ -716,6 +716,22 @@
 </dl>
 </div>
 </div>
+
+	<section id="benefit" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a benefit</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-benefit"></div>
+	</div></section>
+
+	<section id="allowance" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is an allowance</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-allowance"></div>
+	</div></section>
+
+	<section id="reimbursement" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a reimbursement</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-reimbursement"></div>
+	</div></section>
+
 
 	<section id="adminpolicy" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is the CRA's administrative policy for the purpose of taxable benefits</h2>
 	</header>	<div class="modal-body">		
