--- a/payroll/calculate/when/learngsthst.html
+++ b/payroll/calculate/when/learngsthst.html
@@ -198,7 +198,11 @@
 </ul>
 <p>You have to report the GST/HST for those taxable benefits on your GST/HST return using line 105 (or line 103 if you are filing by paper).</p>
 <details><summary>Example</summary>
-<p>You are a GST/HST registrant and have a monthly reporting period. Although you calculated the taxable benefits, including any GST/HST and PST, for each pay period during 2022 the benefits were provided to your employees, you are considered to have collected the GST/HST on those taxable benefits on February 28, 2023. You have to report the GST/HST for those taxable benefits on your GST/HST return for the reporting period that includes the last day of February 2023, using line 105 (or line 103 if you are filing by paper).</p>
+<p>You are a GST/HST registrant and have a monthly reporting period. </p>
+
+<p>You calculated the taxable benefits, including any GST/HST and PST, for each pay period during 2022 the benefits were provided to your employees.</p>
+
+<p>You are considered to have collected the GST/HST on those taxable benefits on February 28, 2023. You have to report the GST/HST for those taxable benefits on your GST/HST return for the reporting period that includes the last day of February 2023, using line 105 (or line 103 if you are filing by paper).</p>
 </details>
 </div>
 
