--- a/payroll/calculate/how/ei.html
+++ b/payroll/calculate/how/ei.html
@@ -388,7 +388,7 @@
 
   <details id="tab-mnl" >            <summary> Any payments (manual calculation)</summary>  
  
-<p class="mrgn-tp-md">You can use the manual calculation method to calculate the EI premiums that must be withheld for all payments made to your employees in a pay period without using the EI premiums tables.</p>	
+<p class="mrgn-tp-md">You can use the manual calculation method to calculate the EI premiums that must be withheld for any payments made to your employees in a pay period without using the EI premiums tables.</p>	
            
           
  <h3>Steps</h3>  
