--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -75,7 +75,7 @@
 <h2 id="toc0">Types of feedback</h2>
 <p>There are 3 type of feedback you can give the CRA.</p>
 	
-	<div class="cnjnctn-type-or cnjnctn-xs">
+	<div class="cnjnctn-type-or">
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Compliment<span class="wb-inv">: Option 1 of X</span></h4>
 <p>Submit a positive experience with the CRA</p>
@@ -89,14 +89,14 @@
 <p>Submit a complaint about the CRA</p>
 </div></div>
 	<div class="clear"></div>
-	<h3>Compliment</h3>
+	<!--<h3>Compliment</h3>
 	<p>You can submit feedback about a positive experience with the service that you received from the CRA. Your feedback will be forwarded onto the responsible manager and/or employee for recognition. A service feedback officer may contact you by phone or by mail as part of the review process.</p>
 	<h3>Suggestion</h3>
 	<p>You can submit a feedback on a suggestion about improving the CRA service(s). Your feedback will be forwarded to the appropriate office or program area for consideration. A service feedback officer may contact you by phone or by mail as part of the review process.</p>
 	<h3>Complaint</h3>
 	<p>You can submit feedback about a complaint about the service that you received from the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>
 	<h2 id="toc1">Feedback about service you received</h2>
-<p>Content.</p>
+<p>Content.</p>-->
 	
 	<h2 id="toc2">Non-service feedback</h2>
 <p>Content.</p>
