--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -94,9 +94,9 @@
 	<h3>Suggestion</h3>
 	<p>You can submit a feedback on a suggestion about improving the CRA service(s). Your feedback will be forwarded to the appropriate office or program area for consideration. A service feedback officer may contact you by phone or by mail as part of the review process.</p>
 	<h3>Complaint</h3>
-	<p>You can submit feedback about a complaint about the service that you received from the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>
+	<p>You can submit feedback about a complaint about the service that you received from the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>-->
 	<h2 id="toc1">Feedback about service you received</h2>
-<p>Content.</p>-->
+<p>Content.</p>
 	
 	<h2 id="toc2">Non-service feedback</h2>
 <p>Content.</p>
