--- a/payroll/file/correct.html
+++ b/payroll/file/correct.html
@@ -297,17 +297,20 @@ July = $75.00 + $80.00
 <p>Your employee should repay the <strong>gross </strong>amount of a salary overpayment if <strong>all </strong>of the following conditions are met:</p>
 
 <ul class="list-unstyled cnjnctn-type-and  mrgn-bttm-lg">
-  <li class="cnjnctn-col">Your employee is on leave of absence </li>
- <li class="cnjnctn-col">Your employee did not work </li>
+  <li class="cnjnctn-col">You paid salary or wages to your employee under the terms of their employment contract </li>
+ <li class="cnjnctn-col">Your employee did not work or ceased to work, this includes when your employee is on a leave of absence</li>
 <li class="cnjnctn-col">Your employee received a payment during the leave period that they would normally be entitled to under the terms of their employment contract or collective agreement </li>
-<li class="cnjnctn-col">Your employee's circumstances have changed, and is no longer entitled to salary or wages </li>
+<li class="cnjnctn-col">Your employee's circumstances have changed, and your employee is no longer entitled to the salary or wages you paid</li>
 </ul>
 <details><summary>Examples: When an employee did not perform their duties</summary>
+<p>The following are examples of when an employee was paid but they did not work or fulfill the terms of their contract. The employee received payments they were not entitled to:</p>
 
 <ul>
-<li>You paid your employee a maternity leave top-up amount, but she did not return to work as required under the terms of her collective agreement. </li>
-<li>You advanced vacation leave credits, but the employee quits working for you before earning the credits. </li>
-<li>You paid a signing bonus to your employee, but he did not work for the time agreed to in his employment contract. </li>
+<li>While they were on vacation leave or sick leave </li>
+<li>While they were on maternity or paternity leave </li>
+<li>That covers a period after they were terminated or left the job </li>
+<li>Because they did not fulfill the terms of a signing bonus they received</li>
+<li>While waiting for a Workers' Compensation Board (WCB) claim that was not approved </li>
 </ul>
 </details>
 <h5>How to correct the overpayment</h5>
