--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -337,11 +337,8 @@
 				  <ul>
                               <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3nota", "live": true}'>Worker performs more than 50% of their employment duties on a reserve</li>
                               <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notb", "live": true}'>Worker performs 50% or less of their employment duties on a reserve </li>
-			      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notc", "live": true}'>You are an Indian band that has a reserve, or a tribal council representing one or more Indian bands that have reserves. Your 
-employee's duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves </li>
-			      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notd", "live": true}'>You are an Indian organization controlled by one or more Indian bands that have reserves, or one or more tribal councils 
-representing one or more Indian bands that have reserves, and the organization is dedicated exclusively to the social, cultural, educational, or economic development of Indians who for the most part live on reserves. Your employee's duties of employment 
-are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves </li>			 
+			      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notc", "live": true}'>You are an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves </li>
+			     		 
                                                         </ul>
                           </div>
                         </li>
@@ -525,9 +522,8 @@ Indian Act</h3>
            
     <div id="ajax-3notc" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
-                You are an Indian band that has a reserve, or a tribal council representing one or more Indian bands that have reserves. Your employee's duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of 
-Indians who for the most part live on reserves</h3>
-	<div data-ajax-replace="#ajax-ex-emp"></div>
+                You are an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</h3>
+	<div data-ajax-replace="#ajax-income-indianband"></div>
 <hr>
 <h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
  <details><summary>Withholding obligations </summary>
@@ -542,30 +538,10 @@ Indians who for the most part live on reserves</h3>
 </ul>
             </div>       
 
-<div id="ajax-3notd" class="alert alert-info hidden">
-              <h3><small>Your result </small><br>
-                You are an Indian organization controlled by one or more Indian bands that have reserves, or one or more tribal councils representing one or more Indian bands that have reserves, and the organization is dedicated exclusively to the social, cultural, 
-educational, or economic development of Indians who for the most part live on reserves. Your employee's duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on 
-reserves</h3>
-	<div data-ajax-replace="#ajax-ex-emp"></div>
-<hr>
-<h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
- <details><summary>Withholding obligations </summary>
-  <div data-ajax-replace="#ajax-withhold-ex-emp"></div>
- </details>
-<details><summary>Reporting obligations - T4 slip</summary>
- <div data-ajax-replace="#ajax-t4-report-ex-emp"></div>
-   </details>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howcalc"></div>  </li>
-<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howreport"></div>    </li>
-</ul>
-            </div>
-
    <div id="ajax-4nota" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
                 Worker performs at least 90% of their employment duties on a reserve</h3>
-              <div data-ajax-replace="#ajax-ex-emp"></div>
+              <div data-ajax-replace="#ajax-income-90"></div>
 <hr>
 <h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
  <details><summary>Withholding obligations </summary>
@@ -584,7 +560,7 @@ reserves</h3>
             <div id="ajax-4notb" class="alert alert-warning hidden">
               <h3><small>Your result </small><br>
                Worker performs less than 90% of their employment duties on a reserve</h3>
-                 <div data-ajax-replace="#ajax-prorate-income"></div>
+                 <div data-ajax-replace="#ajax-income-90-not"></div>
 <hr>
 <h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
  <details><summary>Withholding obligations </summary>
@@ -773,7 +749,8 @@ reserves</h3>
 
 <details><summary>Situation: Your employee performs <strong>more than 50%</strong> of their employment duties on a reserve</summary>
 <h4>Exempt income situation</h4>
-<p>The status Indian individual's (status confirmed in step 1) income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
+<div id="ajax-income-50">
+<p>The status Indian individual's income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Employer <strong>or </strong>the employee is in one of the following situations:
 <ul class="list-unstyled cnjnctn-type-or">
@@ -783,12 +760,11 @@ reserves</h3>
 </li>
 <li class="cnjnctn-col">Employee performs more than 50% of their employment duties on a reserve</li>
 </ul>
-
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
 <h5>Examples</h5>
 <p> <a href="#ajax-example3a" aria-controls="ajax-example3a" class="overlay-lnk" role="button">Example where exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example3b" aria-controls="ajax-example3b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
-
+</div>
+<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
 
 </details>
 
@@ -810,7 +786,8 @@ reserves</h3>
 
 <details><summary>You are an <strong>Indian band or organization</strong> and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</summary>
 <h3>Exempt income situation</h3>
-<p>The status Indian individual's (status confirmed in step 1) income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
+<div id="ajax-income-indianband">
+<p>The status Indian individual's income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
 
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Employer is one of the following:
@@ -821,10 +798,11 @@ reserves</h3>
 </li>
 <li class="cnjnctn-col">Employee's duties of employment are in connection with the employer's non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves </li>
 </ul>
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
+</div>
 <h5>Examples</h5>
 <p> <a href="#ajax-example4a" aria-controls="ajax-example4a" class="overlay-lnk" role="button">Examples where exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example4b" aria-controls="ajax-example4b" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
+<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
 
 </details>
 </li>
@@ -833,24 +811,26 @@ reserves</h3>
 
 <details><summary>Situation: Your employee performs <strong>at least 90%</strong> of the duties related to their employment on a reserve</summary>
 <h4>Exempt income situation</h4>
-<p>The status Indian individual's (status confirmed in step 1) income is exempt from income tax under section 87 of the Indian Act if the employee performs at least 90% of the duties related to their employment on a reserve.</p>
-
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
+<div id="ajax-income-90">
+<p>The status Indian individual's income is exempt from income tax under section 87 of the Indian Act if the employee performs at least 90% of the duties related to their employment on a reserve.</p>
 <h5>Examples</h5>
 <p><a href="#ajax-example1a" aria-controls="ajax-example1a" class="overlay-lnk" role="button">Examples where exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1b" aria-controls="ajax-example1b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
+</div>
+<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
 
 </details>
 
 <details><summary>Situation: Your employee performs <strong>certain duties</strong> related to their employment on a reserve</summary>
 <h4>Partly-exempt income</h4>
-<p>The status Indian individual's (status confirmed in step 1) income is partly-exempt from income tax under section 87 of the Indian Act. The exemption may be prorated only to the portion of the income related to the duties the employee performed on the reserve if the employee performs certain duties related to their employment on a reserve.</p>
+<div id="ajax-income-90-not">
+<p>The status Indian individual's income is partly-exempt from income tax under section 87 of the Indian Act. The exemption may be prorated only to the portion of the income related to the duties the employee performed on the reserve if the employee performs certain duties related to their employment on a reserve.</p>
 
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> partly-exempt income</strong> in this situation, continue to: <a href="#partex">Step 4b: Withhold payroll deductions and remit GST/HST</a>.</p>
 <h5>Examples</h5>
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
-
+</div>
+<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> partly-exempt income</strong> in this situation, continue to: <a href="#partex">Step 4b: Withhold payroll deductions and remit GST/HST</a>.</p>
 
 </details>
 
